Update backend code
