# src/modules/companies/company.controller.ts
@@ -1,6 +1,7 @@
-import { Controller, Get, Post, Body, Param } from '@nestjs/common';
+import { Controller, Get, Post, Body, Param, Patch, UseGuards } from '@nestjs/common';
 import { CompanyService } from './company.service';
 import { CreateCompanyDto } from './dto/create-company.dto';
+import { JwtAuthGuard } from '../auth/jwt-auth.guard';
 
 @Controller('company')
 export class CompanyController {
@@ -11,8 +12,20 @@ export class CompanyController {
         return this.companyService.create(createCompanyDto);
     }
 
+    @Get('id/:id')
+    findById(@Param('id') id: string) {
+        console.log('Fetching company by ID:', id);
+        return this.companyService.findById(id);
+    }
+
     @Get(':email')
     findOne(@Param('email') email: string) {
         return this.companyService.findByEmail(email);
+    }
+
+    @Patch(':id')
+    @UseGuards(JwtAuthGuard)
+    update(@Param('id') id: string, @Body() updateData: any) {
+        return this.companyService.update(id, updateData);
     }
 }
