# src/modules/departments/department.entity.ts
@@ -1,4 +1,4 @@
-import { Entity, Column, PrimaryGeneratedColumn, CreateDateColumn, UpdateDateColumn, ManyToOne, OneToMany } from 'typeorm';
+import { Entity, Column, PrimaryGeneratedColumn, CreateDateColumn, UpdateDateColumn, ManyToOne, OneToMany, JoinColumn } from 'typeorm';
 import { Company } from '../companies/company.entity';
 import { User } from '../users/user.entity';
 
@@ -10,11 +10,22 @@ export class Department {
     @Column()
     name: string;
 
+    @Column({ nullable: true })
+    companyId: string;
+
     @ManyToOne(() => Company, (company) => company.departments)
+    @JoinColumn({ name: 'companyId' })
     company: Company;
 
     @OneToMany(() => User, (user) => user.department)
     users: User[];
+
+    @ManyToOne(() => User, { nullable: true })
+    @JoinColumn({ name: 'managerId' })
+    manager: User;
+
+    @Column({ nullable: true })
+    managerId: string;
 
     @CreateDateColumn()
     createdAt: Date;
